--- a/src/stylessheet/dashboard.css
+++ b/src/stylessheet/dashboard.css
@@ -14,6 +14,7 @@
     height:10rem;
     width:10rem;
     border:rgb(71, 197, 255) 2.5px solid;
+    background-color: cornsilk;
     border-radius:50%;
     text-align: center;
 }
@@ -41,7 +42,7 @@
 
 .title{
     color: cornsilk;
-    width:4rem;
+    width:5rem;
     margin-left:auto;
     margin-right:auto;
     background-color: rgb(101, 158, 116);
