--- a/src/stylessheet/userspanel.css
+++ b/src/stylessheet/userspanel.css
@@ -1,3 +1,15 @@
 .location{
     text-align:center;
+    border:rgb(98, 164, 240) 2.5px solid;
+    border-radius:15px;
+    background:rgb(98, 164, 240);
+    width:25rem;
+    margin-top:1rem;
+    margin-bottom:2rem;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.location h2{
+    color:rgb(255, 255, 255);
 }
